Changelog
=========

5.4-dev - (unreleased)
----------------------

5.3 - (2012-09-27)
------------------
* Feature: added rich text field to CloudVideo to bring it up to par with the
  file based video content 
  [ichimdav #5480]
* Change: Update references to eea.daviz content
  [voineali refs #5420]
* Change: Update references to eea.depiction (formerly valentine.imagescales)
  [voineali refs #5497]
* Bug fix: removed unused protect_email transform
  [ghicaale refs #4926]

5.2 - (2012-08-28)
------------------
* Upgrade step: Manual step ask ichimdav to do it
  - Set images on CloudVideos to the renamed image field
  [ichimdav #5480]
* Upgrade step: under www/portal_types/CloudVideo/manage_aliases:
   - Set "base_edit" to edit method instead of atct_edit
* Upgrade step: under www/portal_properties/site_properties:
   - Set "CloudVideo" to typesUseViewActionInListings property
* Bug fix: display view page for CloudVideo when viewing without /view
  [ichimdav #5480]
* Change: implemented default template for external promotions. Now google
  search results will have proper templates with active links.
  [demarant]
* Upgrade step: replace base_view with promotion_view in portal_types
  for type Promotion. Already done on production.
  [demarant]
* Change: removed protect_email transform
  [ghicaale refs #4926]
* Bug fix: fixed profile version number
  [ghicaale]
* Buf fix: fixed html_eea_chain transform chain
  [ghicaale]
* Upgrade step: under www/portal_setup/manage_upgrades:
   - select "Products.EEAContentTypes:default"
   - click "choose profile"
   - click "show"
   - select both upgrade steps for 4.19 to 5.2
   - click "upgrade"
   - svn del Products.EEAContentTypes/transforms/protect_email.py
   - svn commit
   - [ghicaale refs #4926]
* Bug fix: fixed EEA organigram for cases when there is no Deputy Director.
  [demarant fixes #5402]
* Bug fix: reference jquery.js in a way that is compatible also with Plone 4.2
  [ichimdav #5398]